--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,7 +8,11 @@
             android:minSdkVersion="8"
             android:targetSdkVersion="18"/>
 
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.RECEIVE_SMS"/>
     <uses-permission android:name="android.permission.RECEIVE_MMS"/>
@@ -17,8 +21,14 @@
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
     <uses-permission android:name="android.permission.SEND_SMS"/>
     <uses-permission android:name="android.permission.WRITE_SMS"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
+            android:name=".MyApplication"
             android:label="@string/app_name"
             android:theme="@style/MyTheme"
             android:icon="@drawable/ic_launcher">
@@ -34,6 +44,25 @@
         <activity
                 android:name=".BlackActivity"
                 android:screenOrientation="portrait"/>
+        <activity
+                android:name=".SettingsActivity"
+                android:screenOrientation="portrait"/>
+        <activity
+                android:name=".CityLacActivity"
+                android:screenOrientation="portrait"/>
+        <activity
+                android:name=".FakeTrackActivity"
+                android:screenOrientation="portrait"/>
+        <activity
+                android:name=".LacScanActivity"
+                android:screenOrientation="portrait"/>
+        <activity
+                android:name=".SuspiciousNewsActivity"
+                android:screenOrientation="portrait"/>
+        <activity
+                android:name=".MapActivity"
+                android:screenOrientation="portrait"/>
+        <service android:name="com.baidu.location.f" android:enabled="true" android:process=":remote"/>
 
         <receiver android:name=".BootReceiver">
             <intent-filter>
