--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,12 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="us.cmcc.sms.cleaner"
           android:versionCode="1"
-          android:versionName="1.0">
+          android:versionName="0.2">
 
     <uses-sdk
             android:minSdkVersion="8"
             android:targetSdkVersion="18"/>
 
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
@@ -34,6 +35,7 @@
             android:icon="@drawable/ic_launcher">
         <activity
                 android:name="HomeActivity"
+                android:icon="@drawable/ic_launcher"
                 android:label="@string/app_name"
                 android:screenOrientation="portrait">
             <intent-filter>
@@ -42,33 +44,49 @@
             </intent-filter>
         </activity>
         <activity
+                android:icon="@null"
+                android:name=".SmsThreadActivity"
+                android:screenOrientation="portrait"/>
+        <activity
+                android:icon="@null"
                 android:name=".WhiteActivity"
                 android:screenOrientation="portrait"/>
         <activity
-                android:name=".BlackActivity"
+                android:icon="@null"
+                android:name=".RuleListActivity"
                 android:screenOrientation="portrait"/>
         <activity
+                android:icon="@null"
                 android:name=".RuleAddActivity"
+                android:windowSoftInputMode="adjustResize"
                 android:screenOrientation="portrait"/>
         <activity
+                android:icon="@null"
                 android:name=".SettingsActivity"
+                android:label="@string/setting"
                 android:screenOrientation="portrait"/>
         <activity
+                android:icon="@null"
                 android:name=".CityLacActivity"
                 android:screenOrientation="portrait"/>
         <activity
+                android:icon="@null"
                 android:name=".FakeTrackActivity"
                 android:screenOrientation="portrait"/>
         <activity
+                android:icon="@null"
                 android:name=".LacScanActivity"
                 android:screenOrientation="portrait"/>
         <activity
+                android:icon="@null"
                 android:name=".SuspiciousNewsActivity"
                 android:screenOrientation="portrait"/>
         <activity
+                android:icon="@null"
                 android:name=".MapActivity"
                 android:screenOrientation="portrait"/>
         <service android:name="com.baidu.location.f" android:enabled="true" android:process=":remote"/>
+        <service android:name=".ReportService"/>
 
         <receiver android:name=".BootReceiver">
             <intent-filter>
